@@ -1,6 +1,11 @@
 2010-02-23  Andoni Morales Alastruey  <amorales@flumotion.com>
 
 	* flumotion/component/consumers/applestreamer/resources.py:
+	Added support to set the session ID using a GET parameter in the url
+
+2010-02-23  Andoni Morales Alastruey  <amorales@flumotion.com>
+
+	* flumotion/component/consumers/applestreamer/resources.py:
 	* flumotion/component/consumers/applestreamer/applestreamer.py:
 	* flumotion/component/consumers/applestreamer/applestreamer.xml:
 	Added 'session-timeout' and 'secret-key' properties
